# confidoc

./: .env.example  .gitignore  BETA_TEST_API.md  DOCUMENTATION_COMPTABLE.md  DOC_CONFIDOC_COMPLETE.md  Dockerfile  Makefile  PROGRAMME_INCREDIBLE.md  RAILWAY_ENV_CHECKLIST.md  ROADMAP_90J_CONFIDOC.md  SECURITY_POLICY_ENGINE.md  SETUP_QUICKSTART.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b1a2c3d4e5f6_add_human_feedback_table.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  health.py  ui.py
app/api/v1/: __init__.py  ai.py  auth.py  documents.py  feedback.py  kb.py  router.py  (+2 more)
app/core/: __init__.py  database.py  exceptions.py  logging.py  security.py  text_sanitize.py
app/golden/: __init__.py  compare.py
app/integrations/: __init__.py
app/models/: __init__.py  base.py  document.py  document_version.py  entity_detection.py  human_feedback.py  kb_accounting_record.py  kb_text_chunk.py  llm_request.py  llm_suggestion.py  membership.py  organization.py  refresh_token.py  role.py  user.py
app/repositories/: __init__.py
app/schemas/: __init__.py  auth.py  common.py  document.py  organization.py  user.py
app/services/: __init__.py  anonymization_service.py  auth_service.py  document_processing_service.py  hf_ner_assist_service.py  llm_assist_service.py  ollama_schemas.py  ollama_service.py  pdf_redaction_service.py  presidio_ner_assist_service.py  quality_experience.py  storage_service.py  structured_dataset_service.py  text_segment_selector.py  webhook_notify.py
app/templates/: index.html
app/workers/: __init__.py
docker/: Dockerfile  Dockerfile.worker
golden/: README.md  golden_schema.json  golden_sets.minimal.json  regression_fixtures.json
scripts/: __init__.py  e2e_smoke.sh  extractor_smoke_matrix.sh  post_deploy_regression.sh  run_golden_regression.py  seed.py  validate_golden_sets.py
tests/: conftest.py  test_ollama_schemas.py  test_text_sanitize.py
tests/api/: test_health.py
tests/golden/: test_golden_json_schema.py  test_golden_regression.py  test_synthetic_structured.py
tests/unit/: test_config.py  test_extraction_fallback.py  test_quality_experience.py  test_structured_quality.py  test_text_segment_selector.py
(+2 files in other folders)
